tests/type-reconstruction/ill-typed/lists/lists-4.stella
language core;

extend with #lists, #type-reconstruction;

fn main(n : auto) -> [Bool] {
  return List::isempty([0])
}
